--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,7 @@
         var expect = chai.expect;
         var should = chai.should();
     </script>-->
-    <script src="../build/client-test.js"></script>
+    <script src="../build/times-tables-generator-test.js"></script>
     <script>
       if (window.mochaPhantomJS) {
         mochaPhantomJS.run();
